# image-restoration-pipeline

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  results.md
docs/diagrams/: pipeline_architecture.mmd
include/: degradation.hpp  experiment_registry.hpp  experiment_runner.hpp  experiment_types.hpp  filters.hpp  io.hpp  manual_filters.hpp  metrics.hpp  pipeline.hpp  reporting.hpp  timer.hpp  visualization.hpp
src/: degradation.cpp  experiment_registry.cpp  experiment_runner.cpp  filters.cpp  io.cpp  main.cpp  manual_filters.cpp  metrics.cpp  pipeline.cpp  reporting.cpp  timer.cpp  visualization.cpp
